--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hono/node-server": "^1.11.2",
     "@hono/prometheus": "^1.0.1",
     "@hono/zod-validator": "^0.2.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "hono": "^4.4.4",
@@ -20,6 +21,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.17",
     "@types/pg": "^8.11.6",
     "drizzle-kit": "^0.22.7",
