--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hono/node-server": "^1.11.2",
     "@hono/prometheus": "^1.0.1",
     "@hono/zod-validator": "^0.2.2",
+    "@neondatabase/serverless": "^0.9.3",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
